--- a/src/Component/Furysoft.Version.Tests/Furysoft.Version.Tests.csproj
+++ b/src/Component/Furysoft.Version.Tests/Furysoft.Version.Tests.csproj
@@ -4,4 +4,11 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MinVer" Version="2.5.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
